--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: Projektname
+site_name: LF8-Projekt
 nav:
-  - "Herzlich Willkommen": index.md
+  - "Übersichtsseite": index.md
 theme: material
 markdown_extensions:
   - admonition
